--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 body {
     background-color: #d9dcd6;
 }
-/** change to match tags in html**/
+
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -58,7 +58,7 @@ p {
     background-size: cover;
     background-position: center;
 }
-/** changed order to match html, combined css **/
+
 section {
     width: 75%;
     display: inline-block;
@@ -93,7 +93,7 @@ section {
     margin-left: 25px;
 }
 
-.benefits {
+.aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -104,17 +104,17 @@ section {
     background-color: #2589bd;
 }
 
-.benefit-img {
+.aside-img {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-img h3 {
+.aside-img h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-img img {
+.aside-img img{
     display: block;
     margin: 10px auto;
     max-width: 150px;
